# ssclib

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt
examples/searchFile/: main.c
src/: CMakeLists.txt  buffer.c  buffer.h  bufferarray.c  bufferarray.h  filereader.c  filereader.h  hashtable.c  hashtable.h  log.c  log.h  recycler.c  recycler.h
test/: CMakeLists.txt  simpletest.h  test.c
